version/0.18/_sources/api/solver/_autosummary/settings/multi_component_diffusion_mf.rst.txt
:orphan:

.. _multi_component_diffusion_mf:

multi_component_diffusion_mf
============================

.. autoclass:: ansys.fluent.core.solver.settings_232.multi_component_diffusion_mf.multi_component_diffusion_mf
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`multi_component_diffusion_mf_child <multi_component_diffusion_mf_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`options <options_3>`       'options' child.

==========================   ====================

