version/0.20/_sources/api/solver/_autosummary/settings/multi_component_diffusion_mf.rst.txt
:orphan:

.. _multi_component_diffusion_mf:

multi_component_diffusion_mf
============================

.. autoclass:: ansys.fluent.core.solver.settings_241.multi_component_diffusion_mf.multi_component_diffusion_mf
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`multi_component_diffusion_mf_child <multi_component_diffusion_mf_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`options <options_2>`       'options' child.

==========================   ====================

